# ai-jobfinder

./: .gitignore  README.md  main.py  pyproject.toml  resume.txt
src/: api.py  logger.py  services.py  types.py
